--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,10 @@
   margin-bottom: 30px;
   font-size: 24px;
   text-align: left;
-  background-color: #E0A973;
+  background-color: #28E72C;
 }
 
 .main-header h1 {
   margin-top: 0;
-  color: #9AC6CD;
+  color: #FFFFFF;
 }
