--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
   margin-bottom: 30px;
   font-size: 24px;
   text-align: left;
-  background-color: #28E72C;
+  background-color: #37EF3B;
 }
 
 .main-header h1 {
